--- a/config/settings.yml
+++ b/config/settings.yml
@@ -25,3 +25,4 @@ reservation_icon: "reservation-icon.png"
 min_book_size: 1
 img_book_frame: "book-frame.png"
 pagenate_orders: 8
+paid_img: "paid.png"
